# aichain-core

./: CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  configure.ac
contrib/debian/: bitcoin-qt.desktop  control  copyright
contrib/devtools/: copyright_header.py
contrib/gitian/: provisioner.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: makeseeds.py
depends/: README.md
doc/: README.md  benchmarking.md  build-osx.md  build-unix.md  build-windows.md  gitian-building.md  reduce-traffic.md  release-notes.md  release-process.md
doc/man/: bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoind.1
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  amount.cpp  bitcoin-cli-res.rc  bitcoin-tx-res.rc  bitcoind-res.rc  chain.h  chainparams.cpp  clientversion.cpp  init.cpp  txdb.cpp  validation.cpp  versionbits.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  guiconstants.h  guiutil.cpp  macnotificationhandler.mm  optionsmodel.cpp  overviewpage.cpp
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: test_main.cpp
src/rpc/: mining.cpp
src/test/: blockencodings_tests.cpp  compress_tests.cpp  rpc_tests.cpp  test_bitcoin.cpp
